--- a/Seven-Nation-Army3/package.json
+++ b/Seven-Nation-Army3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-boilerplate",
+  "name": "seven-nation-army-redux",
   "version": "2.1.1",
   "main": "./src/main.js",
   "dependencies": {
@@ -15,6 +15,7 @@
     "history": "^4.7.2",
     "node-sass": "^4.10.0",
     "nprogress": "^0.2.0",
+    "object-hash": "^1.3.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-pdf": "^4.0.5",
